Touches up the visuals of this feature - Fixes to alignment and margin. - Replaced checkbox with fa-circle to be more consistent with sheet interaction. - Replaced "mounted" with fa-icon with title. - Moved the mounted toggle next to encumbrance.

--- a/style/common.css
+++ b/style/common.css
@@ -127,6 +127,10 @@
   justify-content: space-between;
 }
 
+.forbidden-lands .justify-end {
+  justify-content: flex-end;
+}
+
 .forbidden-lands .tabs .item {
   padding: 5px;
 }
